--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </section>
 
 <section>
-  <div class="flex-container-2">
+  <div class="flex-container-2 gradient-background">
     <div>
       <h2 class="playwrite-au-qld">Why not get in touch?</h2>
       <p class="playwrite-au-qld">Shimon Mandel</br>smandel115s@gmail.com</p>
